# FilteringProxy

./: Changelog.md  LICENSE.txt  MANIFEST.in  README.md  setup.cfg
.github/workflows/: tests.yml
schwarz/filtering_proxy/: __init__.py  cli.py  config.py  domainlist.py  plugin.py  test_helpers.py
scripts/: filtering-proxy
tests/: configuration_test.py  domainlist_matching_test.py  domainlist_parsing_test.py  plugin_test.py
