[metadata]
name          = FilteringHTTPProxy
version       = file: VERSION.txt
description   = filtering proxy to block access to various websites

long_description = file:README.md
long_description_content_type = text/markdown

author        = Felix Schwarz
author_email  = felix.schwarz@oss.schwarz.eu
license       = ISC
license_file  = LICENSE.txt

[options]
python_requires = >= 3.8

packages = schwarz.filtering_proxy
namespace_packages = schwarz
zip_safe = true
include_package_data = true
scripts =
	scripts/filtering-proxy

install_requires =
	proxy.py
	schwarzlog

[options.extras_require]
testing =
	FakeFSHelpers
	# >= 1.4.0: assert_path_exists()
	PythonicTestcase >= 1.4.0

[options.packages.find]
exclude =
    tests

